Changes to correct alignment

--- a/smartcar_frontend/src/pages/home/Home.css
+++ b/smartcar_frontend/src/pages/home/Home.css
@@ -89,7 +89,7 @@
 
 .home-name-text {
   margin-left: 4vh;
-  font-weight: 200;
+  font-weight: 100;
   color: rgb(72, 204, 32);
 }
 
